--- a/mes-activemq/mes-activemq-consumer/pom.xml
+++ b/mes-activemq/mes-activemq-consumer/pom.xml
@@ -16,6 +16,11 @@
             <artifactId>mes-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.zx.mes.hyl</groupId>
+            <artifactId>mes-activemq-entity</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>mes-activemq-consumer</finalName>
