--- a/mes-upms/mes-upms-rpc-service/pom.xml
+++ b/mes-upms/mes-upms-rpc-service/pom.xml
@@ -23,7 +23,52 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+
     <build>
         <finalName>mes-upms-rpc-service</finalName>
+        <resources>
+            <!--recources文件夹下的所有文件都打进jar包-->
+            <resource>
+                <targetPath>${project.build.directory}/classes</targetPath>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.xml</include>
+                    <include>**/*.properties</include>
+                </includes>
+            </resource>
+            <!-- 结合com.alibaba.dubbo.container.Main -->
+            <!-- 如果要用dubbo提供的main方法启动,则会默认读取sping.xml配置  -->
+            <resource>
+                <targetPath>${project.build.directory}/classes/META-INF/spring</targetPath>
+                <directory>src/main/resources/spring</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>spring.xml</include>
+                </includes>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.4.6.v20170531</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>9091</port>
+                    <path>/</path>
+                </configuration>
+            </plugin>
+
+        </plugins>
     </build>
 </project>
